[package]
name = "eth_gas_tracker"
version = "0.1.0"
edition = "2021"
authors = ["Giorgi Abuladze (https://abula.dev)"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version =  "0.11.7", features = ["json"] }
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.73"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres"] }